--- a/about.html
+++ b/about.html
@@ -6,4 +6,8 @@ group: navigation
 ---
 {% include JB/setup %}
 
-About PaulGrahamCN
+PG的中文相关内容
+<br/>
+<br/>
+
+请支持我们<a href="{{ BASE_PATH }}/better.html">--点击--</a>
