--- a/_posts/2012-10-19-addiction.html
+++ b/_posts/2012-10-19-addiction.html
@@ -1,9 +1,8 @@
-﻿---
+---
 layout: post
-title: "沉沦欲海"
-description: ""
-category:essays
-tags: [文章列表]
+title : "沉沦欲海"
+category : essays
+tags : [lists]
 ---
 {% include JB/setup %}
 
