--- a/_posts/2012-10-19-beatingtheaverages.html
+++ b/_posts/2012-10-19-beatingtheaverages.html
@@ -1,16 +1,13 @@
 ﻿---
 layout: post
-title: "击败平庸"
-description: ""
-category:essays
-tags: [文章列表]
+title : "击败平庸"
+category : essays
+tags : [lists]
 ---
 {% include JB/setup %}
 
 Beating The  Averages<br/>
 击败平庸<br/><br/>
-
-想要开始创业么？获得<a href="http://ycombinator.com/apply.html">YC</a>的帮助吧<br/><br/>
 
 (本文取自2001年在 Franz 开发者大会的一篇演讲)<br/><br/>
 
