--- a/_posts/2012-10-19-pypar.html
+++ b/_posts/2012-10-19-pypar.html
@@ -3,7 +3,7 @@ layout: post
 title: "Python悖论——计算机也有方言？"
 description: ""
 category:essays
-tags: [文章列表]
+tags: [lists]
 ---
 {% include JB/setup %}
 
