--- a/_posts/2012-10-19-writingandspeaking.html
+++ b/_posts/2012-10-19-writingandspeaking.html
@@ -3,7 +3,7 @@ layout: post
 title: "Writing and Speaking"
 description: ""
 category:essays
-tags: [文章列表]
+tags: [lists]
 ---
 {% include JB/setup %}
 
