--- a/_posts/2012-10-19-lispinweb.html
+++ b/_posts/2012-10-19-lispinweb.html
@@ -1,9 +1,8 @@
-﻿---
+---
 layout: post
-title: "互联网程序中的lisp"
-description: ""
-category:essays
-tags: [lists]
+title : "互联网程序中的lisp"
+category : essays
+tags : [lists]
 ---
 {% include JB/setup %}
 
@@ -81,7 +80,8 @@ Rtml在很大程度上依赖于关键字参数，因为那时我一直在思考C
 
 Viaweb能够将一个颜色作为样本来代表当前值， 并跟随一个“修改”按钮。假设用户点击“修改”按钮， 他们就会来到带有色彩表的页面进行选择。 选择后，他们可以回到编辑对象属性的页面，发现颜色已经改变。 这就是我所说的闭包模拟子程序行为。 看起来，软件让用户选择一个颜色，并返回。实际并非如此；程序生成一个新的CGI调用，但对用户而言，我们正在处理一个子程序。我们写代码的方式表达出，假如用户点击了链接，并前往颜色选择页面，最后返回原有页面。 我只举了我们使用该技术的一个例子。 总而言之，这一技术让我们的程序看起来远比竞争对手更复杂。<br/><br/>
 
-===================================<pre>Lisp in Web-Based Applications
+===================================
+<pre>Lisp in Web-Based Applications
 
 Paul Graham
 
