--- a/_posts/acl/2012-11-05-acl-ch16-cn.html
+++ b/_posts/acl/2012-11-05-acl-ch16-cn.html
@@ -5,220 +5,4 @@ category : acl
 tags : [acl]
 ---
 {% include JB/setup %}
-
-本章的目标是完成一个简单的 HTML 生成器 —— 这个程序可以自动生成一系列包含超文本链接的网页。
-除了介绍特定 Lisp 技术之外，本章还是一个典型的自底向上编程（bottom-up programming）的例子。
-我们以一些通用 HTML 例程作为开始，继而将这些例程看作是一门编程语言，从而更好地编写这个生成器。<br/><br/>
-
-<h1>16.1 HTML</h1>
-HTML （HyperText Markup Language，超文本标记语言）用于构建网页，是一种简单、易学的语言。
-本节就对这种语言作概括性介绍。<br/><br/>
-当你使用<em>网页浏览器</em>阅览网页时，浏览器从远程服务器获取 HTML 文件，并将它们显示在你的屏幕上。
-每个 HTML 文件都包含任意多个<em>标签</em>（tag），这些标签相当于发送给浏览器的指令。<br/><br/>
-
-<img alt="../images/Figure-16.1.png" src="../images/Figure-16.1.png" />
-图 16.1 一个 HTML 文件<br/><br/>
-
-图 16.1 给出了一个简单的 HTML 文件，图 16.2 展示了这个 HTML 文件在浏览器里显示时大概是什么样子。<br/><br/>
-
-<img alt="../images/Figure-16.2.png" src="../images/Figure-16.2.png" />
-图 16.2 一个网页<br/><br/>
-
-注意在三角符号之间的文本并没有被显示出来，这些用三角符号包围的文本就是标签。
-HTML 的标签分为两种，一种是成双成对地出现的：<br/><br/>
-
-<span class="nt">&lt;tag&gt;</span>...<span class="nt">&lt;/tag&gt;</span>
-</pre>
-第一个标签标志着某种情景（environment）的开始，而第二个标签标志着这种情景的结束。
-这种标签的一个例子是 <tt class="docutils literal">&lt;h2&gt;</tt> ：所有被 <tt class="docutils literal">&lt;h2&gt;</tt> 和 <tt class="docutils literal">&lt;/h2&gt;</tt> 包围的文本，都会使用比平常字体尺寸稍大的字体来显示。<br/><br/>
-另外一些成双成对出现的标签包括：创建带编号列表的 <tt class="docutils literal">&lt;ol&gt;</tt> 标签（ol 代表 ordered list，有序表），令文本居中的 <tt class="docutils literal">&lt;center&gt;</tt> 标签，以及创建链接的 <tt class="docutils literal">&lt;a&gt;</tt> 标签（a 代表 anchor，锚点）。<br/><br/>
-被 <tt class="docutils literal">&lt;a&gt;</tt> 和 <tt class="docutils literal">&lt;/a&gt;</tt> 包围的文本就是超文本（hypertext）。
-在大多数浏览器上，超文本都会以一种与众不同的方式被凸显出来 —— 它们通常会带有下划线 —— 并且点击这些文本会让浏览器跳转到另一个页面。
-在标签 <tt class="docutils literal">a</tt> 之后的部分，指示了链接被点击时，浏览器应该跳转到的位置。<br/><br/>
-一个像<br/><br/>
-
-<span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">&quot;foo.html&quot;</span><span class="nt">&gt;</span>
-</pre>
-这样的标签，就标识了一个指向另一个 HTML 文件的链接，其中这个 HTML 文件和当前网页的文件夹相同。
-当点击这个链接时，浏览器就会获取并显示 <tt class="docutils literal">foo.html</tt> 这个文件。<br/><br/>
-当然，链接并不一定都要指向相同文件夹下的 HTML 文件，实际上，一个链接可以指向互联网的任何一个文件。<br/><br/>
-和成双成对出现的标签相反，另一种标签没有结束标记。
-在图 16.1 里有一些这样的标签，包括：创建一个新文本行的 <tt class="docutils literal">&lt;br&gt;</tt> 标签（br 代表 break ，断行），以及在列表情景中，创建一个新列表项的 <tt class="docutils literal">&lt;li&gt;</tt> 标签（li 代表 list item ，列表项）。<br/><br/>
-HTML 还有不少其他的标签，但是本章要用到的标签，基本都包含在图 16.1 里了。<br/><br/>
-
-
-<h1>16.2 HTML Utilities</h1>
-
-<img alt="../images/Figure-16.3.png" src="../images/Figure-16.3.png" />
-图 16.3 标签生成例程<br/><br/>
-
-本节会定义一些生成 HTML 的例程。
-图 16.3 包含了三个基本的、生成标签的例程。
-所有例程都将它们的输出发送到 <tt class="docutils literal"><span class="pre">*standard-output</span></tt> ；可以通过重新绑定这个变量，将输出重定向到一个文件。<br/><br/>
-宏 <tt class="docutils literal">as</tt> 和 <tt class="docutils literal">with</tt> 都用于在标签之间生成表达式。其中 <tt class="docutils literal">as</tt> 接受一个字符串，并将它打印在两个标签之间：<br/><br/>
-
-&gt; (as center &quot;The Missing Lambda&quot;)
-&lt;center&gt;The Missing Lambda&lt;/center&gt;
-NIL
-</pre>
-<tt class="docutils literal">with</tt> 则接受一个代码体（body of code），并将它放置在两个标签之间：<br/><br/>
-
-&gt; (with center
-    (princ &quot;The Unbalanced Parenthesis&quot;))
-&lt;center&gt;
-The Unbalanced Parenthesis
-&lt;/center&gt;
-NIL
-</pre>
-两个宏都使用了 <tt class="docutils literal"><span class="pre">~(...~)</span></tt> 来进行格式化，从而创建包含小写字母的标签。
-HTML 并不介意标签是大写还是小写，但是在包含许许多多标签的 HTML 文件中，小写字母的标签可读性更好一些。<br/><br/>
-除此之外， <tt class="docutils literal">as</tt> 倾向于将所有输出都放在同一行，而 <tt class="docutils literal">with</tt> 则将标签和内容都放在不同的行里。
-（使用 <tt class="docutils literal">~&amp;`</tt> 来进行格式化，以确保输出从一个新行中开始。）
-以上这些工作都只是为了让 HTML 更具可读性，实际上，标签之外的空白并不影响页面的显示方式。<br/><br/>
-图 16.3 中的最后一个例程 <tt class="docutils literal">brs</tt> 用于创建多个文本行。
-在很多浏览器中，这个例程都可以用于控制垂直间距。<br/><br/>
-
-<img alt="../images/Figure-16.4.png" src="../images/Figure-16.4.png" />
-图 16.4 HTML 文件生成例程<br/><br/>
-
-图 16.4 包含用于生成 HTML 文件的例程。
-第一个函数根据给定的符号（symbol）返回一个文件名。
-在一个实际应用中，这个函数可能会返回指向某个特定文件夹的路径（path）。
-目前来说，这个函数只是简单地将 <tt class="docutils literal">.html</tt> 后缀追加到给定符号名的后边。<br/><br/>
-宏 <tt class="docutils literal">page</tt> 负责生成整个页面，它的实现和 <tt class="docutils literal"><span class="pre">with-open-file</span></tt> 很相似： <tt class="docutils literal">body</tt> 中的表达式会被求值，求值的结果通过 <tt class="docutils literal"><span class="pre">*standard-output*</span></tt> 所绑定的流，最终被写入到相应的 HTML 文件中。<br/><br/>
-6.7 小节展示了如何临时性地绑定一个特殊变量。
-在 113 页的例子中，我们在 <tt class="docutils literal">let</tt> 的体内将 <tt class="docutils literal"><span class="pre">*print-base*</span></tt> 绑定为 <tt class="docutils literal">16</tt> 。
-这一次，通过将 <tt class="docutils literal"><span class="pre">*standard-output*</span></tt> 和一个指向 HTML 文件的流绑定，只要我们在 <tt class="docutils literal">page</tt> 的函数体内调用 <tt class="docutils literal">as</tt> 或者 <tt class="docutils literal">princ</tt> ，输出就会被传送到 HTML 文件里。<br/><br/>
-<tt class="docutils literal">page</tt> 宏的输出先在顶部打印 <tt class="docutils literal">title</tt> ，接着打印 <tt class="docutils literal">body</tt> 部分的输出。<br/><br/>
-如果我们调用<br/><br/>
-
-(page 'paren &quot;The Unbalanced Parenthesis&quot;
-  (princ &quot;Something in his expression told her...&quot;))
-</pre>
-这会产生一个名为 <tt class="docutils literal">paren.html</tt> 的文件（文件名由 <tt class="docutils literal"><span class="pre">html-file</span></tt> 函数生成），文件中的内容为：<br/><br/>
-
-<span class="nt">&lt;title&gt;</span>The Unbalanced Parenthesis<span class="nt">&lt;/title&gt;</span>
-<span class="nt">&lt;center&gt;</span>
-<span class="nt">&lt;h2&gt;</span>THE UNBALANCED PARENTHESIS<span class="nt">&lt;/h2&gt;</span>
-<span class="nt">&lt;/center&gt;</span>
-<span class="nt">&lt;br&gt;&lt;br&gt;&lt;br&gt;</span>
-Something in his expression told her...
-</pre>
-除了 <tt class="docutils literal">title</tt> 标签以外，以上输出的所有 HTML 标签在前面已经见到过了。
-被 <tt class="docutils literal">&lt;title&gt;</tt> 标签包围的文本并不显示在网页之内，它们会显示在浏览器窗口，用作页面的标题。<br/><br/>
-
-<img alt="../images/Figure-16.5.png" src="../images/Figure-16.5.png" />
-图 16.5 生成链接的例程<br/><br/>
-
-图片 16.5 给出了用于生成链接的例程。
-<tt class="docutils literal"><span class="pre">with-link</span></tt> 和 <tt class="docutils literal">with</tt> 很相似：它根据给定的地址 <tt class="docutils literal">dest</tt> ，创建一个指向 HTML 文件的链接。
-而链接内部的文本，则通过求值 <tt class="docutils literal">body</tt> 参数中的代码段得出：<br/><br/>
-
-&gt; (with-link 'capture
-    (princ &quot;The Captured Variable&quot;))
-&lt;a href=&quot;capture.html&quot;&gt;The Captured Variable&lt;/a&gt;
-&quot;&lt;/a&gt;&quot;
-</pre>
-<tt class="docutils literal"><span class="pre">with-link</span></tt> 也被用在 <tt class="docutils literal"><span class="pre">link-item</span></tt> 当中，这个函数接受一个字符串，并创建一个带链接的列表项：<br/><br/>
-
-&gt; (link-item 'bq &quot;Backquote!&quot;)
-&lt;li&gt;&lt;a href=&quot;bq.html&quot;&gt;Backquote!&lt;/a&gt;
-&quot;&lt;/a&gt;&quot;
-</pre>
-最后，<tt class="docutils literal">button</tt> 也使用了 <tt class="docutils literal"><span class="pre">with-link</span></tt> ，从而创建一个被方括号包围的链接：<br/><br/>
-
-&gt; (button 'help &quot;Help&quot;)
-[ &lt;a href=&quot;help.html&quot;&gt;Help&lt;/a&gt; ]
-NIL
-</pre>
-
-
-<h1>16.3 迭代式例程</h1>
-在这一节，我们先暂停一下编写 HTML 生成器的工作，转到编写迭代式例程的工作上来。<br/><br/>
-你可能会问，怎样才能知道，什么时候应该编写主程序，什么时候又应该编写子例程？<br/><br/>
-实际上，这个问题，没有答案。<br/><br/>
-通常情况下，你总是先开始写一个程序，然后发现需要写一个新的例程，于是你转而去编写新例程，完成它，接着再回过头去编写原来的程序。
-时间关系，要在这里演示这个开始-完成-又再开始的过程是不太可能的，这里只展示这个迭代式例程的最终形态，需要注意的是，这个程序的编写并不如想象中的那么简单。
-程序通常需要经历多次重写，才会变得简单。<br/><br/>
-
-<img alt="../images/Figure-16.6.png" src="../images/Figure-16.6.png" />
-图 16.6 对树进行迭代<br/><br/>
-
-图 16.6 里定义的新例程是 <tt class="docutils literal">mapc</tt> 的一个变种。它接受一个函数和一个列表作为参数，对于传入列表中的每个元素，它都会用三个参数来调用传入函数，分别是元素本身，前一个元素，以及后一个元素。（当没有前一个元素或者后一个元素时，使用 <tt class="docutils literal">nil</tt> 代替。）<br/><br/>
-
-&gt; (map3 #'(lambda (&amp;rest args) (princ args))
-        '(a b c d))
-(A NIL B) (B A C) (C B D) (D C NIL)
-NIL
-</pre>
-和 <tt class="docutils literal">mapc</tt> 一样， <tt class="docutils literal">map3</tt> 总是返回 <tt class="docutils literal">nil</tt> 作为函数的返回值。需要这类例程的情况非常多。在下一个小节就会看到，这个例程是如何让每个页面都实现“前进一页”和“后退一页”功能的。<br/><br/>
-<tt class="docutils literal">map3</tt> 的一个常见功能是，在列表的两个相邻元素之间进行某些处理：<br/><br/>
-
-&gt; (map3 #'(lambda (c p n)
-            (princ c)
-            (if n (princ &quot; | &quot;)))
-        '(a b c d))
-A | B | C | D
-NIL
-</pre>
-程序员经常会遇到上面的这类问题，但只要花些功夫，定义一些例程来处理它们，就能为后续工作节省不少时间。<br/><br/>
-
-
-<h1>16.4 生成页面</h1>
-一本书可以有任意数量的大章，每个大章又有任意数量的小节，而每个小节又有任意数量的分节，整本书的结构呈现出一棵树的形状。<br/><br/>
-尽管网页使用的术语和书本不同，但多个网页同样可以被组织成树状。<br/><br/>
-本节要构建的是这样一个程序，它生成多个网页，这些网页带有以下结构：
-第一页是一个目录，目录中的链接指向各个<em>节点</em>（section）页面。
-每个节点包含一些指向<em>项</em>（item）的链接。
-而一个项就是一个包含纯文本的页面。<br/><br/>
-除了页面本身的链接以外，根据页面在树状结构中的位置，每个页面都会带有前进、后退和向上的链接。
-其中，前进和后退链接用于在同级（sibling）页面中进行导航。
-举个例子，点击一个项页面中的前进链接时，如果这个项的同一个节点下还有下一个项，那么就跳到这个新项的页面里。
-另一方面，向上链接将页面跳转到树形结构的上一层 —— 如果当前页面是项页面，那么返回到节点页面；如果当前页面是节点页面，那么返回到目录页面。
-最后，还会有索引页面：这个页面包含一系列链接，按字母顺序排列所有项。<br/><br/>
-
-<img alt="../images/Figure-16.7.png" src="../images/Figure-16.7.png" />
-图 16.7 网站的结构<br/><br/>
-
-图 16.7 展示了生成程序创建的页面所形成的链接结构。<br/><br/>
-
-<img alt="../images/Figure-16.8.png" src="../images/Figure-16.8.png" />
-图 16.8 定义一个网站<br/><br/>
-
-图 16.8 包含定义页面所需的数据结构。程序需要处理两类对象：项和节点。这两类对象的结构很相似，不过节点包含的是项的列表，而项包含的是文本块。<br/><br/>
-节点和项两类对象都带有 <tt class="docutils literal">id</tt> 域。
-标识符（id）被用作符号（symbol），并达到以下两个目的：在 <tt class="docutils literal">defitem</tt> 和 <tt class="docutils literal">defsection</tt> 的定义中， 标识符会被设置到被创建的项或者节点当中，作为我们引用它们的一种手段；另一方面，标识符还会作为相应文件的前缀名（base name），比如说，如果项的标识符为 <tt class="docutils literal">foo</tt> ，那么项就会被写到 <tt class="docutils literal">foo.html</tt> 文件当中。<br/><br/>
-节点和项也同时带有 <tt class="docutils literal">title</tt> 域。这个域的值应该为字符串，并且被用作相应页面的标题。<br/><br/>
-在节点里，项的排列顺序由传给 <tt class="docutils literal">defsection</tt> 的参数决定。
-与此类似，在目录里，节点的排列顺序由传给 <tt class="docutils literal">defsite</tt> 的参数决定。<br/><br/>
-
-<img alt="../images/Figure-16.9.png" src="../images/Figure-16.9.png" />
-图 16.9 生成索引和目录<br/><br/>
-
-图 16.9 包含的函数用于生成索引和目录。
-常量 <tt class="docutils literal">contents</tt> 和 <tt class="docutils literal">index</tt> 都是字符串，它们分别用作 <tt class="docutils literal">contents</tt> 页面的标题和 <tt class="docutils literal">index</tt> 页面的标题；另一方面，如果有其他页面包含了目录和索引这两个页面，那么这两个常量也会作为这些页面文件的前缀名。<br/><br/>
-函数 <tt class="docutils literal"><span class="pre">gen-contents</span></tt> 和 <tt class="docutils literal"><span class="pre">gen-index</span></tt> 非常相似。
-它们都打开一个 HTML 文件，生成标题和链接列表。
-不同的地方是，索引页面的项必须是有序的。
-有序列表通过 <tt class="docutils literal"><span class="pre">all-items</span></tt> 函数生成，它遍历各个项并将它加入到保存已知项的列表当中，并使用 <tt class="docutils literal">title&lt;</tt> 函数作为排序函数。
-注意，因为 <tt class="docutils literal">title&lt;</tt> 函数对大小写敏感，所以在对比标题前，输入必须先经过 <tt class="docutils literal"><span class="pre">string-lessp</span></tt> 处理，从而忽略大小写区别。<br/><br/>
-实际程序中的对比操作通常更复杂一些。举个例子，它们需要忽略无意义的句首词汇，比如 <tt class="docutils literal">&quot;a&quot;</tt> 和 <tt class="docutils literal">&quot;the&quot;</tt> 。<br/><br/>
-
-<img alt="../images/Figure-16.10.png" src="../images/Figure-16.10.png" />
-图 16.10 生成网站、节点和项<br/><br/>
-
-图 16.10 包含其余的代码： <tt class="docutils literal"><span class="pre">gen-site</span></tt> 生成整个页面集合，并调用相应的函数，生成节点和项。<br/><br/>
-所有页面的集合包括目录、索引、各个节点以及各个项的页面。
-目录和索引的生成由图 16.9 中的代码完成。
-节点和项由分别由生成节点页面的 <tt class="docutils literal"><span class="pre">gen-section</span></tt> 和生成项页面的 <tt class="docutils literal"><span class="pre">gen-item</span></tt> 完成。<br/><br/>
-这两个函数的开头和结尾非常相似。
-它们都接受一个对象、对象的左兄弟、对象的右兄弟作为参数；它们都从对象的 <tt class="docutils literal">title</tt> 域中提取标题内容；它们都以调用 <tt class="docutils literal"><span class="pre">gen-move-buttons</span></tt> 作为结束，其中 <tt class="docutils literal"><span class="pre">gen-move-buttons</span></tt> 创建指向左兄弟的后退按钮、指向右兄弟的前进按钮和指向双亲（parent）对象的向上按钮。
-它们的不同在于函数体的中间部分： <tt class="docutils literal"><span class="pre">gen-section</span></tt> 创建有序列表，列表中的链接指向节点包含的项，而 <tt class="docutils literal"><span class="pre">gen-item</span></tt> 创建的项则链接到相应的文本页面。<br/><br/>
-项所包含的内容完全由用户决定。
-比如说，将 HTML 标签作为内容也是完全没问题的。
-项的文本当然也可以由其他程序来生成。<br/><br/>
-图 16.11 演示了如何手工地定义一个微型网页。
-在这个例子中，列出的项都是 Fortune 饼干公司新推出的产品。<br/><br/>
-
-<img alt="../images/Figure-16.11.png" src="../images/Figure-16.11.png" />
-图 16.11 一个微型网站<br/><br/>
+SHIT
