--- a/better.html
+++ b/better.html
@@ -9,5 +9,6 @@ group: navigation
 投稿给paulgrahamcn@yahoo.com
 <br/>
 <br/>
+让本站变得更好，回报投稿人<br/>
 <a href="https://me.alipay.com/secondsquare">点击--捐赠</a>
 
