--- a/better.html
+++ b/better.html
@@ -6,7 +6,7 @@ group: navigation
 ---
 {% include JB/setup %}
 
-投稿给paulgrahamcn@yahoo.com
+投稿给zhu.zhonghua@yahoo.com
 <br/>
 <br/>
 让本站变得更好，回报投稿人<br/>
