--- a/better.html
+++ b/better.html
@@ -1,4 +1,4 @@
----
+﻿---
 layout: page
 title: 支持!!
 header: Posts By Better
@@ -6,7 +6,10 @@ group: navigation
 ---
 {% include JB/setup %}
 
-投稿给zhu.zhonghua@yahoo.com
+投稿给<br/>  
+katherine.1864@hotmail.com<br/>  
+zhu.zhonghua@yahoo.com   
+
 <br/>
 <br/>
 让本站变得更好，回报投稿人<br/>
