--- a/better.html
+++ b/better.html
@@ -6,9 +6,7 @@ group: navigation
 ---
 {% include JB/setup %}
 
-投稿给<br/>  
-katherine.1864@hotmail.com<br/>  
-zhu.zhonghua@yahoo.com   
+投稿给zhu.zhonghua@yahoo.com   
 
 <br/>
 <br/>
