--- a/better.html
+++ b/better.html
@@ -6,9 +6,7 @@ group: navigation
 ---
 {% include JB/setup %}
 
-投稿给zhu.zhonghua@yahoo.com   
-
-<br/>
+投稿给zhu.zhonghua@yahoo.coms<br/>
 <br/>
 让本站变得更好，回报投稿人<br/>
 <a href="https://me.alipay.com/secondsquare">点击--捐赠</a>
