--- a/better.html
+++ b/better.html
@@ -1,13 +1,14 @@
-﻿---
+---
 layout: page
-title: 支持!!
-header: Posts By Better
+title: 支持
+header: Posts By Support
 group: navigation
 ---
 {% include JB/setup %}
 
-投稿给zhu.zhonghua@yahoo.coms<br/>
+投稿给zhu.zhonghua@yahoo.com
 <br/>
+<br/>
+
 让本站变得更好，回报投稿人<br/>
 <a href="https://me.alipay.com/secondsquare">点击--捐赠</a>
-
