--- a/better.html
+++ b/better.html
@@ -6,7 +6,7 @@ group: navigation
 ---
 {% include JB/setup %}
 
-投稿给zhu.zhonghua@yahoo.com
+投稿给katherine.1864@hotmail.com,zhu.zhonghua@yahoo.com
 <br/>
 <br/>
 
